# UnityInspectorStandalone

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
UnityInspector/: UnityInspector.filters  UnityInspector.vcxproj
UnityInspector/.claude/: settings.local.json
UnityInspector/src/: dllmain.cpp
UnityInspector/src/config/: config.h
UnityInspector/src/core/: core.h
UnityInspector/src/features/: features.cpp  features.h
UnityInspector/src/features/assembly_explorer/: assembly_explorer.cpp  assembly_explorer.h
UnityInspector/src/features/debug_console/: debug_console.cpp  debug_console.h
UnityInspector/src/features/inspector/: editable_type.h  field_editor.cpp  field_editor.h  hierarchy_window.cpp  inspector.cpp  inspector.h  inspector_esp.cpp  inspector_window.cpp  invoke_popup.cpp  utils.cpp
UnityInspector/src/features/lua_system/: lua_bindings.cpp  lua_bindings.h  lua_plugin.cpp  lua_plugin.h  lua_system.cpp  lua_system.h
UnityInspector/src/features/tests/: Tests.cpp
UnityInspector/src/gui/menu/: menu.cpp  menu.h
UnityInspector/src/gui/menu/debug_tab/: debug_tab.cpp
UnityInspector/src/gui/window/: input_manager.cpp  input_manager.h  window.cpp
UnityInspector/src/helper/: helper.cpp  helper.h
UnityInspector/src/hooks/: hooks.cpp  hooks.h
UnityInspector/src/hooks/console_hooks/: console_hooks.cpp
UnityInspector/src/hooks/quit_hooks/: quit_hooks.cpp
UnityInspector/src/hooks/steam_hooks/: steam_hooks.cpp
UnityInspector/src/loader/: loader.cpp  loader.h
UnityInspector/src/menu/: menu.cpp  menu.h
UnityInspector/src/menu/lua_tab/: lua_tab.cpp  lua_tab.h
UnityInspector/src/pch/: pch.h
UnityInspector/src/window/: external_overlay.cpp  input.cpp
plugins/: example_plugin.lua  unity_inspector_api.lua
